tests/toy/neg/000936_mutation.toylang
program a = { if a program a = { } . sleep; } .
